Replace usage of deprecated Class#newInstance() method